--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,24 @@
 /* You can add global styles to this file, and also import other style files */
+/* You can add global styles to this file, and also import other style files */
+@import "primeicons/primeicons.css";
+@import "@fortawesome/fontawesome-free/css/all.css";
+
+$background-color: #252525 !important;
+$font-color: #fff !important;
+
+body {
+    background-image: url("./imagens/background-car.jpg");
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+    opacity: 0.9;
+}
+
+.p-card {
+    background-color: $background-color;
+    color: $font-color;
+}
+
+.text-center{
+    text-align: center;
+}
